gunna fix this later
gtg for now

--- a/mainRes.qrc
+++ b/mainRes.qrc
@@ -6,5 +6,6 @@
         <file>resources/buttonPlayDark.png</file>
         <file>resources/buttonRewindDark.png</file>
         <file>resources/buttonStopDark.png</file>
+        <file>resources/noCover.png</file>
     </qresource>
 </RCC>
