--- a/musicplayer.ui
+++ b/musicplayer.ui
@@ -63,7 +63,13 @@
           </size>
          </property>
          <property name="text">
-          <string>Song Cover</string>
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="mainRes.qrc">:/images/resources/noCover.png</pixmap>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -223,7 +229,7 @@
      <x>0</x>
      <y>0</y>
      <width>350</width>
-     <height>20</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
