--- a/aboutinfo.ui
+++ b/aboutinfo.ui
@@ -37,9 +37,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>209</x>
-     <y>244</y>
-     <width>171</width>
+     <x>250</x>
+     <y>240</y>
+     <width>71</width>
      <height>26</height>
     </rect>
    </property>
@@ -47,20 +47,7 @@
     <enum>Qt::Horizontal</enum>
    </property>
    <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>212</x>
-     <y>212</y>
-     <width>171</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Github Link</string>
+    <set>QDialogButtonBox::Ok</set>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -102,7 +89,6 @@
   </widget>
   <zorder>label</zorder>
   <zorder>buttonBox</zorder>
-  <zorder>pushButton</zorder>
  </widget>
  <resources>
   <include location="mainRes.qrc"/>
