--- a/aboutinfo.ui
+++ b/aboutinfo.ui
@@ -6,30 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>150</width>
+    <height>150</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
-    <height>300</height>
+    <width>150</width>
+    <height>150</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
-    <height>300</height>
+    <width>150</width>
+    <height>150</height>
    </size>
   </property>
   <property name="baseSize">
    <size>
-    <width>400</width>
-    <height>300</height>
+    <width>150</width>
+    <height>150</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>About FrutaGroove Player...</string>
+   <string/>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="mainRes.qrc">
+    <normaloff>:/images/resources/fgpNewLogo.png</normaloff>:/images/resources/fgpNewLogo.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -37,8 +41,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>240</y>
+     <x>40</x>
+     <y>110</y>
      <width>71</width>
      <height>26</height>
     </rect>
@@ -53,42 +57,48 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>-10</x>
-     <y>0</y>
-     <width>410</width>
-     <height>300</height>
+     <x>40</x>
+     <y>10</y>
+     <width>61</width>
+     <height>61</height>
     </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>400</width>
-     <height>300</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>410</width>
-     <height>300</height>
-    </size>
-   </property>
-   <property name="baseSize">
-    <size>
-     <width>400</width>
-     <height>300</height>
-    </size>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="mainRes.qrc">:/images/resources/aboutFGP.png</pixmap>
+    <pixmap resource="mainRes.qrc">:/images/resources/fgpNewLogo.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
-  <zorder>label</zorder>
-  <zorder>buttonBox</zorder>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>70</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>FrutaGroove Player</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>90</y>
+     <width>41</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Beta 0.1</string>
+   </property>
+  </widget>
  </widget>
  <resources>
   <include location="mainRes.qrc"/>
