--- a/musicplayer.ui
+++ b/musicplayer.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>350</height>
+    <height>140</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>380</width>
-    <height>350</height>
+    <height>140</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>380</width>
-    <height>350</height>
+    <height>140</height>
    </size>
   </property>
   <property name="baseSize">
@@ -36,91 +36,124 @@
     <normaloff>:/images/resources/fgpNewLogo.png</normaloff>:/images/resources/fgpNewLogo.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>358</width>
-      <height>281</height>
+      <width>356</width>
+      <height>74</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout_2">
+    <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
-      <widget class="QLabel" name="coverImage">
-       <property name="minimumSize">
-        <size>
-         <width>200</width>
-         <height>200</height>
-        </size>
-       </property>
+      <widget class="QLabel" name="songName">
        <property name="maximumSize">
         <size>
-         <width>200</width>
-         <height>200</height>
+         <width>367</width>
+         <height>20</height>
         </size>
        </property>
        <property name="text">
         <string/>
-       </property>
-       <property name="pixmap">
-        <pixmap resource="mainRes.qrc">:/images/resources/noCover.png</pixmap>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QListWidget" name="listWidget">
-       <property name="minimumSize">
-        <size>
-         <width>150</width>
-         <height>200</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>150</width>
-         <height>200</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="0">
+      <layout class="QGridLayout" name="mediaLayout">
        <item row="0" column="0">
-        <widget class="QLabel" name="songName">
-         <property name="maximumSize">
+        <widget class="QSlider" name="progressSlider">
+         <property name="minimumSize">
           <size>
-           <width>367</width>
-           <height>20</height>
+           <width>352</width>
+           <height>0</height>
           </size>
          </property>
-         <property name="text">
-          <string>No Song Information</string>
+         <property name="maximumSize">
+          <size>
+           <width>352</width>
+           <height>15</height>
+          </size>
          </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
+         <property name="maximum">
+          <number>100</number>
+         </property>
+         <property name="value">
+          <number>0</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="invertedAppearance">
+          <bool>false</bool>
+         </property>
+         <property name="invertedControls">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
-        <layout class="QGridLayout" name="mediaLayout">
+        <layout class="QGridLayout" name="controlsLayout">
          <item row="0" column="0">
-          <widget class="QSlider" name="progressSlider">
-           <property name="minimumSize">
-            <size>
-             <width>352</width>
-             <height>0</height>
-            </size>
-           </property>
+          <widget class="QPushButton" name="rewindButton">
            <property name="maximumSize">
             <size>
-             <width>352</width>
+             <width>50</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="mainRes.qrc">
+             <normaloff>:/images/resources/buttonRewindLight.png</normaloff>:/images/resources/buttonRewindLight.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>18</width>
+             <height>18</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="3">
+          <widget class="QPushButton" name="fowardButton">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="baseSize">
+            <size>
+             <width>50</width>
+             <height>50</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="mainRes.qrc">
+             <normaloff>:/images/resources/buttonFowardLight.png</normaloff>:/images/resources/buttonFowardLight.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>18</width>
+             <height>18</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="5">
+          <widget class="QSlider" name="volumeSlider">
+           <property name="maximumSize">
+            <size>
+             <width>85</width>
              <height>15</height>
             </size>
            </property>
@@ -128,124 +161,93 @@
             <number>100</number>
            </property>
            <property name="value">
-            <number>0</number>
+            <number>100</number>
            </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
-           <property name="invertedAppearance">
-            <bool>false</bool>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QPushButton" name="stopButton">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>25</height>
+            </size>
            </property>
-           <property name="invertedControls">
-            <bool>false</bool>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="mainRes.qrc">
+             <normaloff>:/images/resources/buttonStopLight.png</normaloff>:/images/resources/buttonStopLight.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>18</width>
+             <height>18</height>
+            </size>
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <layout class="QGridLayout" name="controlsLayout">
-           <item row="0" column="0">
-            <widget class="QPushButton" name="rewindButton">
-             <property name="maximumSize">
-              <size>
-               <width>50</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Rewind</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="3">
-            <widget class="QPushButton" name="fowardButton">
-             <property name="maximumSize">
-              <size>
-               <width>50</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="baseSize">
-              <size>
-               <width>50</width>
-               <height>50</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Foward</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="5">
-            <widget class="QSlider" name="volumeSlider">
-             <property name="maximumSize">
-              <size>
-               <width>85</width>
-               <height>15</height>
-              </size>
-             </property>
-             <property name="maximum">
-              <number>100</number>
-             </property>
-             <property name="value">
-              <number>100</number>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QPushButton" name="stopButton">
-             <property name="maximumSize">
-              <size>
-               <width>50</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Stop</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QPushButton" name="playButton">
-             <property name="maximumSize">
-              <size>
-               <width>50</width>
-               <height>25</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Play</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="4">
-            <widget class="QPushButton" name="volumeButton">
-             <property name="minimumSize">
-              <size>
-               <width>24</width>
-               <height>24</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>24</width>
-               <height>24</height>
-              </size>
-             </property>
-             <property name="baseSize">
-              <size>
-               <width>24</width>
-               <height>24</height>
-              </size>
-             </property>
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-          </layout>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="playButton">
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="mainRes.qrc">
+             <normaloff>:/images/resources/buttonPlayLight.png</normaloff>:/images/resources/buttonPlayLight.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>18</width>
+             <height>18</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="4">
+          <widget class="QPushButton" name="volumeButton">
+           <property name="minimumSize">
+            <size>
+             <width>24</width>
+             <height>24</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>24</width>
+             <height>24</height>
+            </size>
+           </property>
+           <property name="baseSize">
+            <size>
+             <width>24</width>
+             <height>24</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="mainRes.qrc">
+             <normaloff>:/images/resources/volumeLevelLight.png</normaloff>:/images/resources/volumeLevelLight.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>18</width>
+             <height>18</height>
+            </size>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -279,14 +281,15 @@
     <addaction name="actionAbout"/>
     <addaction name="actionCheck_for_Updates"/>
    </widget>
-   <widget class="QMenu" name="menuEdit">
+   <widget class="QMenu" name="menuView">
     <property name="title">
-     <string>Edit</string>
+     <string>View</string>
     </property>
-    <addaction name="actionPlaylists_Editor"/>
+    <addaction name="actionPlaylists"/>
+    <addaction name="actionVisualizer"/>
    </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuEdit"/>
+   <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar">
@@ -319,9 +322,30 @@
     <string>Check for Updates</string>
    </property>
   </action>
-  <action name="actionPlaylists_Editor">
+  <action name="actionLoop">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
-    <string>Playlists Editor</string>
+    <string>Loop</string>
+   </property>
+  </action>
+  <action name="actionShuffle">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Shuffle</string>
+   </property>
+  </action>
+  <action name="actionPlaylists">
+   <property name="text">
+    <string>Playlist</string>
+   </property>
+  </action>
+  <action name="actionVisualizer">
+   <property name="text">
+    <string>Metadata</string>
    </property>
   </action>
  </widget>
